<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
       >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i2f"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            tools:src="@tools:sample/avatars"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/tvf1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvf2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvf3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center" />

        <Switch
            android:id="@+id/tvf4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvf4"
            android:textAlignment="center" />

        <Switch
            android:id="@+id/tvf5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvf5"
            android:textAlignment="center" />

        <Switch
            android:id="@+id/tvf6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvf6"
            android:textAlignment="center" />

        <Switch
            android:id="@+id/tvf7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvf7"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvf8"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/tvf8"
            android:textAlignment="center"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/tvf10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvf9" />

            <RadioButton
                android:id="@+id/tvf11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvf10" />

            <RadioButton
                android:id="@+id/tvf12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvf11" />

            <TextView
                android:id="@+id/txtpuntaje"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/txtpuntaje" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Button2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Button3" />

            <Button
                android:id="@+id/button_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>